--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "year": "2026",
-    "season": "\u6625",
-    "enabled": false
+    "year": "2025",
+    "season": "\u51ac",
+    "enabled": true
 }
